--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,10 +5,12 @@
 */
 
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --bg-color: #000028;
+  --text-color: #F1B2CE;
+  --accent-color: #FF0070;
+  --title-shadow: #FF0070;
+  --bg-image: url(../images/cover-image-dark.png);
+  --rec-visibility: visible;
 }
 
 .theme-dark .page {
