--- a/styles/light.css
+++ b/styles/light.css
@@ -3,12 +3,15 @@
   Здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
-
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --bg-color: #FFF1F7;
+  --text-color: #353430;
+  --accent-color: #FF8DCB;
+  --title-shadow: #FF8DCB;
+  --section-title-color: var(--text-color);
+  --article-title-color: var(--text-color);
+  --bg-image: url(../images/cover-image-light.png);
+  --rec-visibility: hidden;
 }
 
 .theme-light .page {
