--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,299 @@
-/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-
 .page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  font-family: var(--main-font);
+  font-size: var(--font-size);
+  line-height: 1.3;
+  background-image: var(--bg-image);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  min-height: 100vh;
+}
+
+
+.title-decor {
+  background-color: var(--accent-color);
+  color: var(--article-title-color);
+  font-weight: bold;
+}
+
+.link {
+  text-decoration: none;
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.link:hover {
+  border-bottom: 1px solid var(--text-color);
+}
+
+.link:focus {
+  outline: none;
+}
+
+.link:focus-visible {
+  outline: 1px solid var(--text-color);
+}
+
+
+.header {
+  position: relative;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  align-items: center;
+  padding: var(--content-padding);
+  min-height: 100vh;
+}
+
+.decorated-zone::before,
+.decorated-zone::after {
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 25px;
+}
+
+.decorated-zone::before {
+  border-right: 1px solid var(--decor-color);
+  border-top: 1px solid var(--decor-color);
+  right: var(--content-padding);
+  top: var(--content-padding);
+}
+
+.decorated-zone::after {
+  border-left: 1px solid var(--decor-color);
+  border-bottom: 1px solid var(--decor-color);
+  left: var(--content-padding);
+  bottom: var(--content-padding);
+}
+
+.header__theme-menu {
+  justify-self: end;
+  margin-top: 65px;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.header__theme-menu-button {
+  background-color: transparent;
+  border: none;
+  color: var(--accent-color);
+  text-transform: lowercase;
+  padding: 0 13px;
+  cursor: pointer;
+  line-height: 1;
+}
+
+.header__theme-menu-button_active {
+  pointer-events: none;
+  border: 1px solid var(--accent-color);
+}
+
+.header__theme-menu-button:hover {
+  border: var(--hover-color);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid var(--accent-color);
+}
+
+.header__decoration {
+  position: absolute;
+  right: calc(var(--content-padding) + 9px);
+  top: var(--content-padding);
+  color: var(--accent-color);
+  line-height: 1.38;
+  text-transform: uppercase;
+  visibility: var(--rec-visibility);
+}
+
+.header__decoration::after {
+  content: '';
+  display: inline-block;
+  width: 9px;
+  height: 9px;
+  margin-left: 10px;
+  border-radius: 50%;
+  background-color: var(--accent-color);
+  box-shadow: 0 0 4px 2px var(--accent-color);
+}
+
+.header__title {
+  color: var(--title-color);
+  text-shadow: 4px 4px 0 var(--title-shadow);
+  font-size: var(--title-font-size);
+  line-height: 0.825;
+  margin-left: -20px;
+}
+
+.header__text {
+  max-width: 355px;
+  justify-self: end;
+  margin-bottom: 55px;
+}
+
+
+.content {
+  padding: 40px var(--content-padding);
+}
+
+.section {
+  display: grid;
+  gap: 20px;
+  margin-bottom: 50px;
+}
+
+.section__title {
+  color: var(--section-title-color);
+  font-size: inherit;
+  font-weight: bold;
+}
+
+.article-list {
+  display: grid;
+  gap: 20px;
+}
+
+.article {
+  display: grid;
+  gap: 10px;
+}
+
+.article__title {
+  font-size: inherit;
+}
+
+.article__text {
+  line-height: 1.3;
+}
+
+
+.gallery {
+  display: grid;
+  gap: var(--content-padding);
+}
+
+.gallery__title {
+  margin-bottom: var(--content-padding);
+}
+
+.gallery__list {
+  display: grid;
+  gap: var(--content-padding);
+}
+
+.gallery__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.footer {
+  position: relative;
+  display: grid;
+  place-items: center;
+  min-height: 100vh;
+  padding: var(--content-padding);
+}
+
+.footer__title {
+  color: var(--title-color);
+  text-shadow: 2px 2px 0 var(--title-shadow);
+  font-size: var(--title-font-size);
+}
+
+
+@media (width >= 768px) {
+  :root {
+    --content-padding: 20px;
+    --gap: 20px;
+  }
+  
+  .header__title {
+    font-size: var(--title-font-size-desktop);
+    margin-left: 0;
+  }
+  
+  .header__text {
+    margin-bottom: 162px;
+  }
+  
+  .content {
+    padding: 60px var(--content-padding);
+  }
+  
+  .section {
+    grid-template-columns: 1fr 2fr;
+  }
+  
+  .section:not(.section-wide) .section__content {
+    grid-column: 2;
+  }
+  
+  .section-wide .section__title {
+    max-width: 30%;
+  }
+  
+  .gallery__list {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  
+  .gallery__item:first-child,
+  .gallery__item:last-child {
+    grid-column: span 2;
+  }
+  
+  .gallery__item:nth-child(2),
+  .gallery__item:nth-child(3) {
+    grid-row: span 2;
+  }
+  
+  .footer__title {
+    font-size: var(--title-font-size-desktop);
+  }
+}
+
+@media (width >= 1024px) {
+  .header__theme-menu {
+    justify-self: center;
+    margin-left: 0;
+    margin-top: 0;
+  }
+  
+  .header__theme-menu-list {
+    flex-direction: row;
+  }
+  
+  .section-wide .section__content {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: var(--gap);
+  }
+  
+  .header__text {
+    margin-bottom: 114px;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --bg-color: #FFF1F7;
+    --text-color: #353430;
+    --accent-color: #FF8DCB;
+    --title-shadow: #FF8DCB;
+    --section-title-color: var(--text-color);
+    --article-title-color: var(--text-color);
+    --bg-image: url(../images/cover-image-light.png);
+    --rec-visibility: hidden;
+  }
 }
