--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,25 @@
-/*
-  Переменные для вашего проекта
-  и их переопределение под различные устройства
-*/
+:root {
+
+  --bg-color: #000028;
+  --text-color: #F1B2CE;
+  --accent-color: #FF0070;
+  --title-color: #DB00FF;
+  --title-shadow: var(--accent-color);
+  --section-title-color: var(--accent-color);
+  --article-title-color: var(--bg-color);
+  --decor-color: var(--accent-color);
+  --hover-border-color: rgba(255, 0, 112, 0.4);
+
+
+  --font-family: 'IBM Plex mono', monospace;
+  --font-size: 18px;
+  --line-height: 1.3;
+  --title-font-size-mobile: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  --title-font-size-desktop: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+
+
+  --padding: 10px;
+
+  --bg-image: url(../images/cover-image-dark.png);
+  --rec-visibility: visible;
+}
