--- a/styles/dark.css
+++ b/styles/dark.css
@@ -14,5 +14,31 @@
 }
 
 .theme-dark .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  background-image: var(--bg-image);
+}
+
+.theme-dark .header__decoration {
+  color: var(--accent-color);
+}
+
+.theme-dark .header__theme-menu-button {
+  border-color: var(--hover-border-color);
+  color: var(--text-color);
+}
+
+.theme-dark .header__theme-menu-button_active,
+.theme-dark .header__theme-menu-button:disabled {
+  background-color: var(--accent-color);
+  color: var(--bg-color);
+}
+
+.theme-dark .title-decor::after {
+  background-color: var(--decor-color);
+}
+
+.theme-dark .footer {
+  background-color: var(--bg-color);
+  color: var(--text-color);
 }
