--- a/styles/style.css
+++ b/styles/style.css
@@ -4,13 +4,102 @@
   font-family: var(--font-family);
   font-size: 18px;
   line-height: 1.3;
-  background-image: var(--bg-image);
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
   min-height: 100vh;
   display: grid;
   grid-template-rows: auto 1fr auto;
+}
+
+.header {
+  position: relative;
+  padding: 20px;
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  background-image: var(--bg-image);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.header__decoration {
+  position: absolute;
+  top: 10px;
+  right: 19px;
+  color: var(--accent-color);
+  font-size: 18px;
+  line-height: 1.39;
+  text-transform: uppercase;
+}
+
+.header__decoration::after {
+  content: "";
+  display: inline-block;
+  width: 9px;
+  height: 9px;
+  margin-left: 10px;
+  border-radius: 50%;
+  background-color: var(--accent-color);
+  box-shadow: 0 0 4px 2px var(--accent-color);
+  animation: pulse 2s infinite ease-in-out;
+}
+
+.header__theme-menu {
+  justify-self: end;
+  margin-top: 65px;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  list-style: none;
+}
+
+.header__theme-menu-button {
+  border: 1px solid transparent;
+  padding: 1.5px 13px;
+  color: var(--menu-text-color);
+  font: inherit;
+  background: transparent;
+  cursor: pointer;
+  text-transform: lowercase;
+}
+
+.header__theme-menu-button:hover {
+  border-color: var(--hover-color);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom-color: var(--menu-text-color);
+}
+
+.header__theme-menu-button_active {
+  border-color: var(--border-color);
+  pointer-events: none;
+}
+
+.header__title {
+  color: var(--title-color);
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  line-height: 0.825;
+  text-shadow: 4px 4px 0 var(--title-shadow);
+  margin-left: -20px;
+  align-self: center;
+}
+
+.header__text {
+  max-width: 491px;
+  justify-self: end;
+  margin-top: 55px;
+  margin-bottom: 0;
+  max-height: fit-content;
 }
 
 .decorated-zone {
@@ -52,92 +141,6 @@
   background-color: var(--accent-color);
   color: var(--article-title-color);
   font-weight: 400;
-}
-
-.header {
-  position: relative;
-  padding: 20px;
-  min-height: 100vh;
-  display: grid;
-  grid-template-rows: 1fr min-content 1fr;
-}
-
-.header__decoration {
-  position: absolute;
-  top: 10px;
-  right: 19px;
-  color: var(--accent-color);
-  font-size: 18px;
-  line-height: 1.39;
-  text-transform: uppercase;
-}
-
-.header__decoration::after {
-  content: "";
-  display: inline-block;
-  width: 9px;
-  height: 9px;
-  margin-left: 10px;
-  border-radius: 50%;
-  background-color: var(--accent-color);
-  box-shadow: 0 0 4px 2px var(--accent-color);
-  animation: pulse 1.5s infinite ease-in-out;
-}
-
-.header__theme-menu {
-  justify-self: end;
-  margin-top: 65px;
-}
-
-.header__theme-menu-list {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  list-style: none;
-}
-
-.header__theme-menu-button {
-  border: 1px solid transparent;
-  padding: 1.5px 13px;
-  color: var(--menu-color);
-  font: inherit;
-  background: transparent;
-  cursor: pointer;
-  text-transform: lowercase;
-}
-
-.header__theme-menu-button:hover {
-  border-color: var(--hover-color);
-}
-
-.header__theme-menu-button:focus {
-  outline: none;
-}
-
-.header__theme-menu-button:focus-visible {
-  border-bottom-color: var(--menu-color);
-}
-
-.header__theme-menu-button_active {
-  border-color: var(--menu-color);
-  pointer-events: none;
-}
-
-.header__title {
-  color: var(--title-color);
-  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-  line-height: 0.825;
-  text-shadow: 4px 4px 0 var(--title-shadow);
-  margin-left: -20px;
-  align-self: center;
-}
-
-.header__text {
-  max-width: 491px;
-  justify-self: end;
-  margin-top: 55px;
-  margin-bottom: 0;
-  max-height: fit-content;
 }
 
 .content {
@@ -192,9 +195,8 @@
 }
 
 .gallery {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
+  display: grid;
+  gap: 20px;
 }
 
 .gallery__image {
@@ -241,6 +243,7 @@
 
   .header__theme-menu {
     margin-top: 170px;
+    color: var(--menu-text-color);
   }
 
   .header__title {
@@ -364,4 +367,5 @@
     opacity: 0.5;
     transform: scale(1.1);
   }
+  
 }
