--- a/styles/variables.css
+++ b/styles/variables.css
@@ -17,4 +17,5 @@
   --title-font-size-desktop: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   --bg-image: url(../images/cover-image-dark.png);
   --rec-visibility: visible;
+  --menu-text-color: #ff0070;
 }
