--- a/styles/dark.css
+++ b/styles/dark.css
@@ -4,6 +4,7 @@
   --h-text-color: #000028;
   --accent-color: #ff0070;
   --title-shadow: #ff0070;
+  --title-color: #DB00FF;
   --menu-text-color: #ff0070;
   --bg-image: url(../images/cover-image-dark.png);
   --rec-visibility: visible;
