--- a/styles/light.css
+++ b/styles/light.css
@@ -2,7 +2,8 @@
   --bg-color: #fff1f7;
   --text-color: #353430;
   --accent-color: #ff8dcb;
-  --title-shadow: #ff8dcb;
+  --title-shadow: #FF8DCB;
+  --title-color: #FFC2E6;
   --section-title-color: var(--text-color);
   --article-title-color: var(--text-color);
   --bg-image: url(../images/cover-image-light.png);
