--- a/styles/light.css
+++ b/styles/light.css
@@ -2,8 +2,8 @@
   --bg-color: #fff1f7;
   --text-color: #353430;
   --accent-color: #ff8dcb;
-  --title-shadow: #FF8DCB;
-  --title-color: #FFC2E6;
+  --title-shadow: #ff8dcb;
+  --title-color: #ffc2e6;
   --section-title-color: var(--text-color);
   --article-title-color: var(--text-color);
   --bg-image: url(../images/cover-image-light.png);
@@ -26,4 +26,25 @@
 .theme-light .footer {
   background-color: var(--bg-color);
   color: var(--text-color);
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --bg-color: #fff1f7;
+    --text-color: #353430;
+    --accent-color: #ff8dcb;
+    --title-shadow: #ff8dcb;
+    --title-color: #ffc2e6;
+    --section-title-color: var(--text-color);
+    --article-title-color: var(--text-color);
+    --bg-image: url(../images/cover-image-light.png);
+    --rec-visibility: hidden;
+    --border-color: #353430;
+    --hover-color: #32312d66;
+    --menu-text-color: #353430;
+  }
+
+  .theme-auto .header__decoration {
+    display: none;
+  }
 }
