--- a/styles/style.css
+++ b/styles/style.css
@@ -135,7 +135,6 @@
   font-weight: 700;
   font-size: inherit;
   line-height: 1.3;
-  /*margin-bottom: 10px;*/
   height: fit-content;
 }
 
@@ -169,17 +168,17 @@
 
 .article {
   margin-bottom: 0;
-  display: grid;
-  gap: 10px;
+  padding-block-start: 10px;
 }
 
 .article__title {
   font-size: 18px;
+  margin-right: 10px;
 }
 
 .article__text {
   line-height: 1.3;
- /* margin-top: 12px;*/
+  /* margin-top: 12px;*/
 }
 
 .article__link {
