--- a/styles/style.css
+++ b/styles/style.css
@@ -143,42 +143,39 @@
   color: var(--article-title-color);
   font-weight: 400;
 }
-/*
+
 .content {
-  padding: 40px 10px;
+  display: grid;
+  gap: 50px;
 }
 
 .section {
-  margin-bottom: 50px;
+  display: grid;
+  gap: 20px;
 }
-*/
+
 .section__title {
   color: var(--section-title-color);
-  /*margin-bottom: 20px;*/
   font-size: 18px;
-  margin-left: 15px;
-  max-width: 315px;
+  padding-left: 20px;
 }
 
 .section__content {
-  display: flex;
-  flex-direction: column;
+  display: grid;
   gap: 20px;
 }
 
 .article {
-  margin-bottom: 0;
-  padding-block-start: 10px;
+  display: grid;
+  gap: 10px;
 }
 
 .article__title {
   font-size: 18px;
-  margin-right: 10px;
 }
 
 .article__text {
   line-height: 1.3;
-  /* margin-top: 12px;*/
 }
 
 .article__link {
@@ -201,7 +198,7 @@
 
 .gallery {
   display: grid;
-  gap: 20px;
+  gap: 10px;
 }
 
 .gallery__image {
@@ -260,41 +257,23 @@
   }
 
   .content {
-    display: grid;
     gap: 80px;
-    /*padding: 60px 20px;*/
   }
 
-  .section:nth-child(1) {
-    display: grid;
+  .section {
     grid-template-columns: 1fr 2fr;
-    gap: 20px;
   }
 
-  .section:nth-child(1) .section__title {
-    grid-column: 1;
-    margin-bottom: 0;
+  .section:nth-child(2) .section__content {
+    grid-column: 1 / -1;
   }
 
-  .section:nth-child(1) .section__content {
-    grid-column: 2;
-  }
-
-  .section:nth-child(2) {
-    display: grid;
-    gap: 20px;
-  }
-
-  .section:nth-child(3) {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    gap: 20px;
+  .section:nth-child(4) {
+    grid-template-columns: 1fr;
   }
 
   .gallery {
-    display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, auto);
     gap: 20px;
   }
 
@@ -349,9 +328,11 @@
   }
 
   .section:nth-child(2) .section__content {
-    display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+  }
+
+  .section:nth-child(2) .article__text {
+    padding-top: 10px;
   }
 
   .footer {
