--- a/styles/style.css
+++ b/styles/style.css
@@ -143,39 +143,38 @@
   color: var(--article-title-color);
   font-weight: 400;
 }
-
+/*
 .content {
-  display: grid;
-  gap: 50px;
+  padding: 40px 10px;
 }
 
 .section {
-  display: grid;
-  gap: 20px;
+  margin-bottom: 50px;
 }
-
+*/
 .section__title {
   color: var(--section-title-color);
+  /*margin-bottom: 20px;*/
   font-size: 18px;
-  padding-left: 20px;
+  margin-left: 15px;
+  max-width: 315px;
 }
 
 .section__content {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   gap: 20px;
 }
 
-.article {
-  display: grid;
-  gap: 10px;
-}
 
 .article__title {
   font-size: 18px;
+  margin-right: 10px;
 }
 
 .article__text {
   line-height: 1.3;
+   margin-top: 10px;
 }
 
 .article__link {
@@ -198,7 +197,7 @@
 
 .gallery {
   display: grid;
-  gap: 10px;
+  gap: 20px;
 }
 
 .gallery__image {
@@ -257,23 +256,41 @@
   }
 
   .content {
+    display: grid;
     gap: 80px;
+    /*padding: 60px 20px;*/
   }
 
-  .section {
+  .section:nth-child(1) {
+    display: grid;
     grid-template-columns: 1fr 2fr;
+    gap: 20px;
   }
 
-  .section:nth-child(2) .section__content {
-    grid-column: 1 / -1;
+  .section:nth-child(1) .section__title {
+    grid-column: 1;
+    margin-bottom: 0;
   }
 
-  .section:nth-child(4) {
-    grid-template-columns: 1fr;
+  .section:nth-child(1) .section__content {
+    grid-column: 2;
+  }
+
+  .section:nth-child(2) {
+    display: grid;
+    gap: 20px;
+  }
+
+  .section:nth-child(3) {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 20px;
   }
 
   .gallery {
+    display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, auto);
     gap: 20px;
   }
 
@@ -328,11 +345,10 @@
   }
 
   .section:nth-child(2) .section__content {
+    display: grid;
     grid-template-columns: repeat(3, 1fr);
-  }
-
-  .section:nth-child(2) .article__text {
-    padding-top: 10px;
+    gap: 20px;
+    padding-left: 1vh;
   }
 
   .footer {
