--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,6 @@
   background-attachment: fixed;
   display: grid;
   grid-template-rows: auto 1fr auto;
-  gap: 60px;
 }
 
 .header {
@@ -22,6 +21,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  margin-bottom: 60px;
 }
 
 .header__decoration {
@@ -143,6 +143,17 @@
   color: var(--article-title-color);
   font-weight: 400;
 }
+
+.title-decor-galery {
+  background-color: var(--accent-color);
+  color: var(--h-text-color);
+  font-weight: 700;
+  font-size: inherit;
+  line-height: 1.3;
+  height: fit-content;
+  margin-left: 10px;
+  margin-bottom: 20px;
+}
 /*
 .content {
   padding: 40px 10px;
@@ -166,7 +177,6 @@
   gap: 20px;
 }
 
-
 .article__title {
   font-size: 18px;
   margin-right: 10px;
@@ -174,7 +184,7 @@
 
 .article__text {
   line-height: 1.3;
-   margin-top: 10px;
+  margin-top: 10px;
 }
 
 .article__link {
@@ -208,8 +218,6 @@
 }
 
 .footer {
-  position: relative;
-  min-height: 100vh;
   display: grid;
   place-items: center;
   padding: 10px;
@@ -258,6 +266,7 @@
   .content {
     display: grid;
     gap: 80px;
+    margin-bottom: 60px;
     /*padding: 60px 20px;*/
   }
 
@@ -292,6 +301,8 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, auto);
     gap: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
   }
 
   .gallery__item:nth-child(1) {
