--- a/styles/style.css
+++ b/styles/style.css
@@ -176,6 +176,32 @@
   gap: 20px;
 }
 
+.section:nth-child(1) {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 20px;
+}
+
+.section:nth-child(1) .section__title {
+  grid-column: 1;
+  margin-bottom: 0;
+}
+
+.section:nth-child(1) .section__content {
+  grid-column: 2;
+}
+
+.section:nth-child(2) {
+  display: grid;
+  gap: 20px;
+}
+
+.section:nth-child(3) {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 20px;
+}
+
 .article__title {
   font-size: 18px;
   margin-left: 5px;
@@ -206,7 +232,11 @@
 
 .gallery {
   display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, auto);
   gap: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .gallery__image {
@@ -253,44 +283,10 @@
   line-height: 0.825;
   text-shadow: 4px 4px 0 var(--title-shadow);
   align-self: center;
+  text-align: center;
 }
 
-.section:nth-child(1) {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  gap: 20px;
-}
-
-.section:nth-child(1) .section__title {
-  grid-column: 1;
-  margin-bottom: 0;
-}
-
-.section:nth-child(1) .section__content {
-  grid-column: 2;
-}
-
-.section:nth-child(2) {
-  display: grid;
-  gap: 20px;
-}
-
-.section:nth-child(3) {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  gap: 20px;
-}
-
-.gallery {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, auto);
-  gap: 20px;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
-@media (width <= 768px) {
+@media (max-width <= 768px) {
   .header__decoration {
     top: 20px;
     right: 30px;
@@ -318,10 +314,7 @@
     max-height: fit-content;
   }
 
-  .article__title {
-    margin-left: 10px;
-  }
-
+  .article__title,
   .article__text {
     margin-left: 10px;
   }
@@ -364,6 +357,31 @@
 
   .footer {
     min-height: 768px;
+  }
+}
+
+@media (width <= 375px) {
+  .section:nth-child(1),
+  .section:nth-child(2),
+  .section:nth-child(3) {
+    display: block;
+  }
+
+  .gallery {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin: 0;
+    padding: 0 15px;
+  }
+
+  .footer {
+    padding: 10px 15px;
+    max-width: 375px;
+  }
+
+  .footer__title {
+    font-size: clamp(5rem, 2.5rem + 10vw, 6.25rem);
   }
 }
 
