--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,9 @@
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 .page {
   background-color: var(--bg-color);
   color: var(--text-color);
@@ -13,7 +19,7 @@
 
 .header {
   position: relative;
-  padding: 15px 20px 15px 15px;
+  padding: 15px 20px 15px 0px;
   height: 100vh;
   min-height: 668px;
   display: grid;
@@ -91,7 +97,6 @@
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   line-height: 0.825;
   text-shadow: 4px 4px 0 var(--title-shadow);
-  margin-left: -20px;
   align-self: center;
 }
 
@@ -209,6 +214,7 @@
   height: 100%;
   object-fit: cover;
   display: block;
+  max-width: 100%;
 }
 
 .gallery__item:nth-child(1) {
@@ -334,7 +340,7 @@
 
   .header__theme-menu {
     justify-self: center;
-    margin: 0;
+    margin: 3px 0 0 20px;
   }
 
   .header__theme-menu-list {
@@ -358,7 +364,7 @@
   }
 }
 
-@media (width <= 375px) {
+@media (width <= 530px) {
   .decorated-zone::after {
     left: 10px;
     bottom: 10px;
@@ -406,11 +412,6 @@
     margin: 0 10px 0 0;
   }
 
-  .article__text {
-    margin-left: 0;
-    font-size: 18px;
-    max-width: 355px;
-  }
   .title-decor {
     margin-right: 10px;
   }
@@ -443,6 +444,14 @@
   .header__decoration {
     top: 10px;
     right: 20px;
+  }
+}
+
+@media (width <= 375px) {
+  .article__text {
+    margin-left: 0;
+    font-size: 18px;
+    max-width: 355px;
   }
 }
 
