--- a/styles/dark.css
+++ b/styles/dark.css
@@ -10,6 +10,7 @@
   --rec-visibility: visible;
   --border-color: #FF0070;
   --hover-color: #FF007066;
+  --decor-color: #FF0070;
 }
 
 .theme-dark .page {
